# public_taka_the_bot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  build_bot.sh  docker-compose.yaml.save
taka_the_discord_bot_database/: Dockerfile  postgres_database_dump.sql
taka_the_discord_bot_status/: Cargo.toml  Dockerfile  index.html  index.js
taka_the_discord_bot_status/src/: main.rs
