[package]
name = "taka_the_discord_bot_status"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taka_the_discord_bot_status"
path = "src/main.rs"


[dependencies]
tokio = {version = "1.28.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
axum = "0.7.5"
reqwest = "0.12.7"
common = {path = "../taka_the_discord_bot_common" }
